--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "Vipin Nagar",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -28,6 +30,7 @@
     "nodemailer": "^6.9.9",
     "nodemon": "^3.1.0",
     "razorpay": "^2.9.2",
+    "stripe": "^14.20.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "twilio": "^4.21.0"
