--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-async-handler": "^1.2.0",
     "firebase-admin": "^12.0.0",
     "googleapis": "^133.0.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
@@ -30,6 +31,7 @@
     "nodemailer": "^6.9.9",
     "nodemon": "^3.1.0",
     "razorpay": "^2.9.2",
+    "socket.io": "^4.7.5",
     "stripe": "^14.20.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
