--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Vipin Nagar",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
+    "axios-retry": "^4.1.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.1",
